--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "nghm": "node --max_old_space_size=8096"
+    "nghm": "node --max_old_space_size=4096 ./node_modules/@angular/cli/bin/ng serve"
   },
   "private": true,
   "dependencies": {
